# imperative-rs

./: .gitignore  .main.rs.swp  Cargo.toml  README.md  main.rs
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decoder.rs  fuzz_encoder.rs
imperative/: Cargo.toml  README.md
imperative-bench/: Cargo.toml
imperative-bench/benches/: chip8.rs  test.ch8
imperative-derive/: Cargo.toml  README.md
imperative-derive/src/: .instruction.rs.swp  instruction.rs  instructionset.rs  lib.rs  matcher.rs
imperative-tests/: Cargo.toml
imperative-tests/tests/: tests.rs
imperative-tests/tests/collisions/: exact.rs  exact.stderr  mixed_bin_hex.rs  mixed_bin_hex.stderr  prefix.rs  prefix.stderr  star_opcodes.rs  star_opcodes.stderr  variable_infix.rs  variable_infix.stderr  variable_prefix.rs  variable_prefix.stderr  variable_suffix.rs  variable_suffix.stderr
imperative-tests/tests/decoding/: bin_opcodes.rs  hex_opcodes.rs  mod.rs  star_opcodes.rs  variable_length.rs
imperative-tests/tests/encoding/: bin_opcodes.rs  hex_opcodes.rs  mod.rs  star_opcodes.rs  variable_length.rs
imperative-tests/tests/invalid_enums/: unnamed_fields.rs  unnamed_fields.stderr  var_name_longer_one.rs  var_name_longer_one.stderr
imperative-tests/tests/macro_hygiene/: redefined_primitives.rs
imperative-tests/tests/overflows/: overflows.rs  overflows.stderr
imperative-tests/tests/variable_checks/: hex_digit_var.rs  hex_digit_var.stderr  missing_field.rs  missing_field.stderr  missing_in_opcode.rs  missing_in_opcode.stderr  two_symbol_varname.rs  two_symbol_varname.stderr
imperative/src/: lib.rs
instruction-set/: Cargo.toml
instruction-set/src/: .lib.rs.swp  lib.rs  match_builder.rs  trait.rs
istrait/: Cargo.toml
istrait/src/: lib.rs
tests/: opcode_tests.rs
