[package]
name = "instruction-set-dev"
version = "0.1.0"
authors = ["Kevin Kielholz <kevinkielholz@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "expand"
path = "main.rs"

[dependencies]
instruction-set = {path = "instruction-set"}
proc-macro2 = "*"

