[package]
name = "imperative-rs-derive"
version = "0.1.3"
authors = ["Kevin Kielholz <kevinkielholz@rwth-aachen.de>"]
edition = "2018"
repository = "https://github.com/hank-der-hafenarbeiter/imperative-rs"
keywords = ["instructionsets", "encoding", "decoding", "instruction", "emulator"]
categories = ["emulators", "encoding", "simulation"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Procedural macro that auto derives the `InstructionSet` trait defined by the `imperative` crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.3"
syn = { version = "1.0.17", features = ["full", "extra-traits"] }
lazy_static = "1.4.0"
proc-macro2 = "1.0.10"

[lib]
proc-macro = true
