[package]
name = "imperative-tests"
version = "0.1.1"
authors = ["Kevin Kielholz <kevinkielholz@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imperative-rs =  {path = "../imperative"}
trybuild = "1.0.26"

