[package]
name = "imperative"
version = "0.1.0"
authors = ["Kevin Kielholz <kevinkielholz@rwth-aachen.de>"]
edition = "2018"
repository = "https://github.com/hank-der-hafenarbeiter/imperative-rs"
keywords = ["instructionsets", "emulation", "instruction encoding"]
categories = ["emulators", "encoding", "simulation"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imperative-derive = {path = "../imperative-derive"}
